@@ -18,22 +18,21 @@
 
 package org.apache.hadoop.hive.ql.exec;
 
-import java.io.FileOutputStream;
 import java.io.OutputStream;
 import java.io.PrintStream;
 import java.io.Serializable;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Method;
+import java.util.Arrays;
+import java.util.Comparator;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
-import java.util.Arrays;
-import java.util.Comparator;
 
-import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.hive.ql.plan.explain;
 import org.apache.hadoop.hive.ql.plan.explainWork;
+import org.apache.hadoop.hive.ql.plan.api.StageType;
 import org.apache.hadoop.util.StringUtils;
 
 
@@ -352,4 +351,7 @@ public class ExplainTask extends Task<explainWork> implements Serializable {
     }
   }
 
+  public int getType() {
+    return StageType.EXPLAIN;
+  }
 }
