@@ -30,6 +30,7 @@ import org.apache.hadoop.hive.ql.io.HiveOutputFormat;
 import org.apache.hadoop.hive.ql.metadata.HiveException;
 import org.apache.hadoop.hive.ql.plan.fileSinkDesc;
 import org.apache.hadoop.hive.ql.plan.tableDesc;
+import org.apache.hadoop.hive.ql.plan.api.OperatorType;
 import org.apache.hadoop.hive.serde2.SerDeException;
 import org.apache.hadoop.hive.serde2.Serializer;
 import org.apache.hadoop.hive.shims.ShimLoader;
@@ -246,4 +247,7 @@ public class FileSinkOperator extends TerminalOperator <fileSinkDesc> implements
     super.jobClose(hconf, success);
   }
   
+  public int getType() {
+    return OperatorType.FILESINK;
+  }
 }
