@@ -23,6 +23,7 @@ import java.util.ArrayList;
 
 import org.apache.hadoop.hive.ql.metadata.HiveException;
 import org.apache.hadoop.hive.ql.plan.joinDesc;
+import org.apache.hadoop.hive.ql.plan.api.OperatorType;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.hive.serde2.objectinspector.StructField;
 import org.apache.hadoop.hive.serde2.objectinspector.StructObjectInspector;
@@ -84,6 +85,10 @@ public class JoinOperator extends CommonJoinOperator<joinDesc> implements Serial
       e.printStackTrace();
       throw new HiveException(e);
     }
+  }
+  
+  public int getType() {
+    return OperatorType.JOIN;
   }
 
   
